# image_sense

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_image_metadata.csv  test_metadata.csv
docs/: DEVELOPMENT.md  codebaseSummary.md  commands.md  currentTask.md  llmmodels.md  projectRoadmap.md  techStack.md
docs/gemini-docs/: gemini-models.md  gemini-structured.md  gemini-text.md  gemini-vision.md
resources/backend/src/core/: __init__.py  metadata_handler.py
src/: __init__.py  cli.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  ascii_art.py  config.py  image_processor.py  image_utils.py  llm_handler.py  metadata_handler.py  output_handler.py  settings_manager.py
test_data/: debug_output.txt  debug_output2.txt  sample_output.txt
tests/: .coverage  conftest.py  test_bulk.py  test_claude_bulk.py  test_cli.py  test_compression.py  test_gemini_bulk.py  test_models_cli.py  test_output.py  test_xml_output.py
tests/cli/: test_main.py  test_models_cli.py
tests/core/: test_image_processor.py  test_image_utils.py  test_metadata_handler.py
tests/test_images/bulk_images_5/metadata/: diverse-business-team-meeting-at-table-2023-11-27-04-49-47-utc_metadata.csv  diverse-business-team-meeting-at-table-2023-11-27-04-49-47-utc_metadata.xml  fist-hands-circle-and-diversity-support-human-rig-2023-11-27-05-32-40-utc_metadata.csv  fist-hands-circle-and-diversity-support-human-rig-2023-11-27-05-32-40-utc_metadata.xml  (+6 more)
tests/test_images/metadata/: analysis_results.xml  test_metadata.csv  test_metadata.xml
